tests/ui/transmute-size-increase.msrv.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-size-increase.rs:18:29
   |
18 | const INCREASE_SIZE: AU16 = transmute!(0u8);
   |                             ^^^^^^^^^^^^^^^
   |
   = note: source type: `u8` (8 bits)
   = note: target type: `AU16` (16 bits)
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
